fixed pagination spacing issue

--- a/scss/header/pagination.scss
+++ b/scss/header/pagination.scss
@@ -85,7 +85,6 @@ label {
 
     .pager-navigation {
       font-size: 11px;
-      margin-left: 3px;
     }
   }
 }
